--- a/UniversityLibrary/Storyboard/Base.lproj/Patron.storyboard
+++ b/UniversityLibrary/Storyboard/Base.lproj/Patron.storyboard
@@ -100,7 +100,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="g1Q-Rc-MwT">
-                        <barButtonItem key="leftBarButtonItem" title="Logout" id="B0u-5W-coH"/>
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="B0u-5W-coH">
+                            <connections>
+                                <action selector="logout:" destination="9Rb-1c-f7v" id="3ki-Xz-Q4U"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yiJ-H7-SEE" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -147,7 +151,7 @@
                         <inset key="separatorInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                         <color key="sectionIndexBackgroundColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="90" id="oWe-8K-Jw3" customClass="BookCell" customModule="UniversityLibrary" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="BookCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookCell" rowHeight="90" id="oWe-8K-Jw3" customClass="BookCell" customModule="UniversityLibrary" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="oWe-8K-Jw3" id="QHN-pc-Aea">
@@ -195,7 +199,6 @@
                                     <outlet property="BookView" destination="DPT-tL-T3a" id="gCW-2P-MXe"/>
                                     <outlet property="bookAuthorLabel" destination="qGd-pR-Cxu" id="4Z4-SM-Pbn"/>
                                     <outlet property="bookTitleLabel" destination="x5I-uM-I9u" id="ixr-Sw-x58"/>
-                                    <segue destination="4ZL-i1-iTb" kind="show" id="6cR-KO-nT0"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -282,101 +285,110 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ODS-eQ-OLx">
                                 <rect key="frame" x="35.5" y="84" width="303" height="540"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jzt-ON-hVa">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jzt-ON-hVa">
                                         <rect key="frame" x="0.0" y="0.0" width="303" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jP3-li-Fcg">
-                                        <rect key="frame" x="0.0" y="30.5" width="303" height="34.5"/>
+                                        <rect key="frame" x="0.0" y="30.5" width="303" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEa-1R-9mr">
-                                        <rect key="frame" x="0.0" y="75" width="303" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="70.5" width="303" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DtW-MP-S3p">
-                                        <rect key="frame" x="0.0" y="105.5" width="303" height="30"/>
+                                        <rect key="frame" x="0.0" y="101" width="303" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Publisher" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="goF-WF-d6s">
-                                        <rect key="frame" x="0.0" y="145.5" width="303" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="141" width="303" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ADG-YG-D6p">
-                                        <rect key="frame" x="0.0" y="176" width="303" height="30"/>
+                                        <rect key="frame" x="0.0" y="171.5" width="303" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Year of Publication" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pn7-wJ-MEn">
-                                        <rect key="frame" x="0.0" y="216" width="303" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="211.5" width="303" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yhd-dA-9EI">
-                                        <rect key="frame" x="0.0" y="246.5" width="303" height="30"/>
+                                        <rect key="frame" x="0.0" y="242" width="303" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Location in Library" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I5X-VZ-sxy">
-                                        <rect key="frame" x="0.0" y="286.5" width="303" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="282" width="303" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZAp-jE-rOQ">
-                                        <rect key="frame" x="0.0" y="317" width="303" height="30"/>
+                                        <rect key="frame" x="0.0" y="312.5" width="303" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Current Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ML-dx-pxN">
-                                        <rect key="frame" x="0.0" y="357" width="303" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="352.5" width="303" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PP7-ku-np6">
-                                        <rect key="frame" x="0.0" y="387.5" width="303" height="30"/>
+                                        <rect key="frame" x="0.0" y="383" width="303" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Call Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SML-hY-n0B">
-                                        <rect key="frame" x="0.0" y="427.5" width="303" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="423" width="303" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NwV-Qc-TSu">
-                                        <rect key="frame" x="0.0" y="458" width="303" height="30"/>
+                                        <rect key="frame" x="0.0" y="453.5" width="303" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MCe-te-W36" customClass="MenuUIButton" customModule="UniversityLibrary" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="498" width="303" height="42"/>
+                                        <rect key="frame" x="0.0" y="493.5" width="303" height="36.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="25" maxY="0.0"/>
                                         <state key="normal" title="Search" image="searchIcon">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
+                                            <action selector="seachBook:" destination="t8y-RG-YzI" eventType="touchUpInside" id="LNH-FI-6qc"/>
                                             <action selector="searchBook:" destination="t8y-RG-YzI" eventType="touchUpInside" id="uzO-fw-nSJ"/>
                                             <action selector="searchButton:" destination="t8y-RG-YzI" eventType="touchUpInside" id="7Gx-xV-aQi"/>
-                                            <segue destination="CzR-jJ-0Pd" kind="show" id="epb-Fu-cMq"/>
+                                            <action selector="searchForBook:" destination="t8y-RG-YzI" eventType="touchUpInside" id="H7Y-Zj-tHM"/>
+                                            <segue destination="CzR-jJ-0Pd" kind="show" id="mwq-DR-Gu4"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lJM-T1-rv4" customClass="MenuUIButton" customModule="UniversityLibrary" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="540" width="303" height="0.0"/>
+                                        <state key="normal" title="Search(Mock)"/>
+                                        <connections>
+                                            <action selector="searchForBook:" destination="t8y-RG-YzI" eventType="touchUpInside" id="wvV-Hq-YGc"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -408,10 +420,10 @@
             </objects>
             <point key="canvasLocation" x="604" y="1567.4662668665669"/>
         </scene>
-        <!--View Controller-->
+        <!--Checkout Book View Controller-->
         <scene sceneID="IcQ-TJ-oz0">
             <objects>
-                <viewController id="CzR-jJ-0Pd" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CheckoutBookViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="CzR-jJ-0Pd" customClass="CheckoutBookViewController" customModule="UniversityLibrary" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Qcq-0s-xUE"/>
                         <viewControllerLayoutGuide type="bottom" id="gbC-sg-eTh"/>
